Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Mở tuyến tàu cao tốc từ TP HCM đi Côn Đảo",
+    "content": "Từ ngày 28/3, tuyến tàu cao tốc từ TP HCM đi Côn Đảo sẽ chính thức hoạt động, cung cấp thêm lựa chọn di chuyển cho hành khách. Tàu có 374 ghế, khởi hành từ cảng Sài Gòn lúc 7h và quay về từ Côn Đảo lúc 11h30. Tổng thời gian di chuyển ước tính hơn 5 tiếng. Tuyến tàu này sẽ tăng cường kết nối giữa TP HCM và Côn Đảo, nơi thu hút nhiều du khách.",
+    "link": "https://vnexpress.net/mo-tuyen-tau-cao-toc-tu-tp-hcm-di-con-dao-4860343.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Khi nào tuyến tàu cao tốc từ TP HCM đi Côn Đảo sẽ bắt đầu hoạt động?",
+    "answers": [
+      {
+        "text": "28/3",
+        "correct": true
+      },
+      {
+        "text": "1/4",
+        "correct": false
+      },
+      {
+        "text": "15/3",
+        "correct": false
+      },
+      {
+        "text": "20/3",
+        "correct": false
+      },
+      {
+        "text": "30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
     "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
     "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
@@ -274,6 +305,33 @@
     ]
   },
   {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -300,33 +358,6 @@
       },
       {
         "text": "Đau bụng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -4386,33 +4417,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -4435,6 +4439,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -4520,33 +4551,6 @@
       },
       {
         "text": "Có thêm đối thủ cạnh tranh trong khai thác",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nguyễn Văn Lai: 'Chuẩn đầu vào giúp khai phá tiềm năng runner'",
-    "content": "Nguyễn Văn Lai, nhà vô địch SEA Games, cho rằng việc áp dụng chuẩn đầu vào cho giải marathon phong trào VnExpress Marathon Volvo All-Star sẽ khuyến khích các vận động viên (VĐV) nghiêm túc hơn trong việc tập luyện. Anh nhấn mạnh rằng công nghệ hiện đại đã giúp tăng cường hiệu suất tập luyện của các runner, và việc đặt ra tiêu chuẩn sẽ tạo động lực cho họ phát triển. Lai tin rằng giải đấu này không chỉ giúp VĐV trong nước nâng cao trình độ mà còn là cơ hội để phát hiện những tài năng mới cho điền kinh Việt Nam.",
-    "link": "https://vnexpress.net/nguyen-van-lai-chuan-dau-vao-giup-khai-pha-tiem-nang-runner-4859605.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chuẩn đầu vào của giải marathon VnExpress Volvo All-Star có tác dụng gì cho các runner?",
-    "answers": [
-      {
-        "text": "Tạo động lực cho runner tập luyện nghiêm túc hơn.",
-        "correct": true
-      },
-      {
-        "text": "Khiến các runner chán nản và không muốn tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Giảm bớt số lượng các giải marathon ở Việt Nam.",
-        "correct": false
-      },
-      {
-        "text": "Tăng chi phí tham gia cho các runner.",
         "correct": false
       }
     ]
