Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Thủ tướng chỉ đạo mới về chi trả lương hưu, trợ cấp bảo hiểm qua ngân hàng",
+    "content": "Thủ tướng Phạm Minh Chính đã chỉ đạo mở rộng chi trả lương hưu và trợ cấp bảo hiểm xã hội không dùng tiền mặt qua hệ thống ngân hàng. Ông nhấn mạnh tầm quan trọng của việc đảm bảo công dân, đặc biệt là những người ở vùng sâu, vùng xa, có thể tiếp cận dịch vụ tài chính một cách bình đẳng. Để thực hiện điều này, cần ứng dụng công nghệ mới và hoàn thiện hạ tầng tài chính, đồng thời bảo vệ an toàn cho người dân khi sử dụng các dịch vụ số hóa.",
+    "link": "https://tuoitre.vn/thu-tuong-chi-dao-moi-ve-chi-tra-luong-huu-tro-cap-bao-hiem-qua-ngan-hang-20250312130745563.htm",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thủ tướng đã chỉ đạo gì về chi trả lương hưu và trợ cấp bảo hiểm xã hội?",
+    "answers": [
+      {
+        "text": "Mở rộng chi trả không dùng tiền mặt qua ngân hàng.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ đạo chi trả bằng tiền mặt.",
+        "correct": false
+      },
+      {
+        "text": "Khuyến khích sử dụng tiền mặt trong chi trả.",
+        "correct": false
+      },
+      {
+        "text": "Giảm mức lương hưu cho người cao tuổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mở tuyến tàu cao tốc từ TP HCM đi Côn Đảo",
     "content": "Từ ngày 28/3, tuyến tàu cao tốc từ TP HCM đi Côn Đảo sẽ chính thức hoạt động, cung cấp thêm lựa chọn di chuyển cho hành khách. Tàu có 374 ghế, khởi hành từ cảng Sài Gòn lúc 7h và quay về từ Côn Đảo lúc 11h30. Tổng thời gian di chuyển ước tính hơn 5 tiếng. Tuyến tàu này sẽ tăng cường kết nối giữa TP HCM và Côn Đảo, nơi thu hút nhiều du khách.",
     "link": "https://vnexpress.net/mo-tuyen-tau-cao-toc-tu-tp-hcm-di-con-dao-4860343.html",
@@ -107,6 +134,33 @@
       },
       {
         "text": "30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -305,33 +359,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -358,6 +385,33 @@
       },
       {
         "text": "Đau bụng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -1020,28 +1074,28 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
     "answers": [
       {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "text": "Suy gan cấp và biến chứng thần kinh",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "text": "Chỉ gây triệu chứng nhẹ",
         "correct": false
       },
       {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "text": "Không có biến chứng gì",
         "correct": false
       },
       {
-        "text": "Chỉ làm đau lưng mà thôi.",
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -1078,28 +1132,28 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
     "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
     "answers": [
       {
-        "text": "Suy gan cấp và biến chứng thần kinh",
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
         "correct": true
       },
       {
-        "text": "Chỉ gây triệu chứng nhẹ",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Không có biến chứng gì",
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
