--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Động thổ xây dựng khu công nghiệp VSIP 2 Quảng Ngãi",
+    "content": "Lễ động thổ xây dựng khu công nghiệp VSIP 2 Quảng Ngãi đã diễn ra vào ngày 12 tháng 3 năm 2025, với sự tham gia của Chủ tịch Quốc hội Trần Thanh Mẫn và Phó Thủ tướng Nguyễn Hòa Bình. Dự án có diện tích hơn 497ha, tổng vốn đầu tư khoảng 161 triệu USD, với mục tiêu phát triển khu công nghiệp bền vững và thu hút các nhà đầu tư trong nước và quốc tế. Khu công nghiệp này hứa hẹn tạo ra khoảng 50.000 việc làm cho người lao động và áp dụng các công nghệ tiên tiến, thân thiện với môi trường.",
+    "link": "https://tuoitre.vn/dong-tho-xay-dung-khu-cong-nghiep-vsip-2-quang-ngai-20250312130329021.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khu công nghiệp VSIP 2 Quảng Ngãi được động thổ vào ngày nào?",
+    "answers": [
+      {
+        "text": "12 tháng 3 năm 2025",
+        "correct": true
+      },
+      {
+        "text": "1 tháng 1 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "15 tháng 4 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "30 tháng 12 năm 2024",
+        "correct": false
+      },
+      {
+        "text": "5 tháng 6 năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt tạm giam 2 cựu cán bộ ngân hàng giải ngân sai quy định gần 17 tỉ đồng",
     "content": "Cơ quan Cảnh sát điều tra Công an tỉnh Cà Mau đã bắt tạm giam hai cựu cán bộ ngân hàng vì liên quan đến việc giải ngân sai quy định số tiền 16,9 tỉ đồng. Hai người này, gồm ông Ngô Thanh Sơn và ông Nguyễn Tấn Đạt, đã thực hiện hành vi lập và ký khống các biên bản để vay vốn cho doanh nghiệp thực hiện dự án điện mặt trời. Hiện cơ quan chức năng đang tiếp tục điều tra mở rộng vụ án này.",
     "link": "https://tuoitre.vn/bat-tam-giam-2-cuu-can-bo-ngan-hang-giai-ngan-sai-quy-dinh-gan-17-ti-dong-20250312132316698.htm",
@@ -220,6 +251,33 @@
     ]
   },
   {
+    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
+    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
+    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
+    "answers": [
+      {
+        "text": "Thay khớp gối phải",
+        "correct": true
+      },
+      {
+        "text": "Khám bệnh khác",
+        "correct": false
+      },
+      {
+        "text": "Tham quan du lịch",
+        "correct": false
+      },
+      {
+        "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -269,33 +327,6 @@
       },
       {
         "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Thay khớp gối phải",
-        "correct": true
-      },
-      {
-        "text": "Khám bệnh khác",
-        "correct": false
-      },
-      {
-        "text": "Tham quan du lịch",
-        "correct": false
-      },
-      {
-        "text": "Học tiếng Việt",
         "correct": false
       }
     ]
@@ -1155,33 +1186,6 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -1235,6 +1239,33 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -4632,33 +4663,6 @@
       },
       {
         "text": "Vì Zirkzee không có kinh nghiệm quốc tế",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Huyện ngoại thành Hà Nội, huyện nông thôn mới Hưng Yên thu ngân sách lớn hơn nhiều tỉnh thành",
-    "content": "Bài viết đề cập đến việc thu ngân sách của các huyện ngoại thành Hà Nội, đặc biệt là huyện Đông Anh, đạt mức cao hơn nhiều tỉnh thành khác. Huyện Đông Anh đã thu được 27.081 tỉ đồng trong năm 2024, vượt 205% dự toán. Điều này cho thấy sự chênh lệch lớn trong thu ngân sách giữa các địa phương, với nhiều huyện của Hà Nội có mức thu ngang ngửa với tỉnh, thành phố khác trên cả nước. Huyện Văn Giang của Hưng Yên cũng ghi nhận mức thu ấn tượng với 13.000 tỉ đồng, nhờ vào việc phát triển khu công nghiệp và thu hút đầu tư.",
-    "link": "https://tuoitre.vn/huyen-ngoai-thanh-ha-noi-huyen-nong-thon-moi-hung-yen-thu-ngan-sach-lon-hon-nhieu-tinh-thanh-20250311124139333.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao huyện Đông Anh lại có thu ngân sách cao hơn nhiều tỉnh thành khác?",
-    "answers": [
-      {
-        "text": "Do thu tiền sử dụng đất và thu hút đầu tư lớn.",
-        "correct": true
-      },
-      {
-        "text": "Do ngân sách quốc gia tăng trưởng.",
-        "correct": false
-      },
-      {
-        "text": "Do tăng thu từ thuế tiêu thụ đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Do cải cách hành chính của chính quyền địa phương.",
         "correct": false
       }
     ]
