Update generated content

--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Người Mỹ mua vội ôtô để tránh tăng giá vì thuế",
+    "content": "Một số người Mỹ đang mua ôtô nhanh chóng để tránh tăng giá do lo ngại về mức thuế 25% mà Tổng thống Donald Trump có thể áp dụng đối với hàng hóa nhập khẩu từ Canada và Mexico. Nhiều khách hàng như Matthew Mitchell đã quyết định mua xe sớm hơn kế hoạch để không bị ảnh hưởng bởi sự tăng giá có thể xảy ra. Các đại lý ôtô cho biết họ vẫn có đủ xe để đáp ứng nhu cầu, nhưng sự không chắc chắn về thuế quan đang khiến người tiêu dùng hành động nhanh chóng.",
+    "link": "https://vnexpress.net/nguoi-my-mua-voi-oto-de-tranh-tang-gia-vi-thue-4860240.html",
+    "cat": "kinh-doanh",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao người Mỹ lại mua ôtô nhanh chóng trong thời gian gần đây?",
+    "answers": [
+      {
+        "text": "Họ lo ngại về việc tăng giá do thuế quan sắp áp dụng.",
+        "correct": true
+      },
+      {
+        "text": "Họ muốn thay đổi phương tiện di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều tiết kiệm để chi cho ôtô.",
+        "correct": false
+      },
+      {
+        "text": "Họ muốn ủng hộ các thương hiệu địa phương.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Động thổ xây dựng khu công nghiệp VSIP 2 Quảng Ngãi",
     "content": "Lễ động thổ xây dựng khu công nghiệp VSIP 2 Quảng Ngãi đã diễn ra vào ngày 12 tháng 3 năm 2025, với sự tham gia của Chủ tịch Quốc hội Trần Thanh Mẫn và Phó Thủ tướng Nguyễn Hòa Bình. Dự án có diện tích hơn 497ha, tổng vốn đầu tư khoảng 161 triệu USD, với mục tiêu phát triển khu công nghiệp bền vững và thu hút các nhà đầu tư trong nước và quốc tế. Khu công nghiệp này hứa hẹn tạo ra khoảng 50.000 việc làm cho người lao động và áp dụng các công nghệ tiên tiến, thân thiện với môi trường.",
     "link": "https://tuoitre.vn/dong-tho-xay-dung-khu-cong-nghiep-vsip-2-quang-ngai-20250312130329021.htm",
@@ -345,33 +372,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
     "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
     "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
@@ -421,6 +421,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -2099,6 +2126,33 @@
     ]
   },
   {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
     "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
     "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
@@ -2125,33 +2179,6 @@
       },
       {
         "text": "1.500 cửa hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
@@ -4449,33 +4476,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -4525,6 +4525,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
