--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Chủ tịch Hà Nội: Triển khai theo chỉ đạo của Chính phủ, loại bỏ cán bộ không đủ năng lực",
+    "content": "Chủ tịch UBND TP Hà Nội Trần Sỹ Thanh đã chỉ đạo các đơn vị thực hiện theo chỉ đạo của Chính phủ về việc loại bỏ cán bộ không đủ năng lực. Ông yêu cầu cần cải cách thể chế, cải thiện môi trường đầu tư và thu hút nhân tài, đồng thời nhấn mạnh đến việc xây dựng khung pháp lý riêng cho đặc khu kinh tế. Hà Nội cũng đặt mục tiêu giảm thời gian xử lý thủ tục hành chính và chi phí kinh doanh để thúc đẩy phát triển kinh tế xã hội.",
+    "link": "https://tuoitre.vn/chu-tich-ha-noi-trien-khai-theo-chi-dao-cua-chinh-phu-loai-bo-can-bo-khong-du-nang-luc-20250312134839697.htm",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Chủ tịch Hà Nội đã chỉ đạo gì về cán bộ không đủ năng lực?",
+    "answers": [
+      {
+        "text": "Loại bỏ cán bộ không đủ năng lực.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường tuyển dụng cán bộ mới.",
+        "correct": false
+      },
+      {
+        "text": "Tăng lương cho cán bộ.",
+        "correct": false
+      },
+      {
+        "text": "Không có biện pháp cụ thể nào.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lừa mua vé chuyến bay giải cứu du học sinh trong đại dịch COVID-19",
     "content": "Trần Thị Kim Thanh đã bị TAND TP.HCM tuyên phạt 12 năm tù vì tội lừa đảo, chiếm đoạt hơn 1,7 tỷ đồng từ những du học sinh Việt Nam muốn trở về nước trong thời gian dịch COVID-19. Bằng cách lợi dụng chính sách chuyến bay giải cứu của Chính phủ, Thanh đã quảng cáo trên mạng xã hội rằng có thể giúp mua vé máy bay và lo thủ tục cần thiết, khiến nhiều người tin tưởng và chuyển tiền cho cô.",
     "link": "https://tuoitre.vn/lua-mua-ve-chuyen-bay-giai-cuu-du-hoc-sinh-trong-dai-dich-covid-19-20250312132712383.htm",
@@ -1307,37 +1334,6 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
-    "answers": [
-      {
-        "text": "Bệnh sởi",
-        "correct": true
-      },
-      {
-        "text": "Ngộ độc thực phẩm",
-        "correct": false
-      },
-      {
-        "text": "Nhiễm trùng đường tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -1387,6 +1383,37 @@
       },
       {
         "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "answers": [
+      {
+        "text": "Bệnh sởi",
+        "correct": true
+      },
+      {
+        "text": "Ngộ độc thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Nhiễm trùng đường tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -2064,6 +2091,37 @@
     ]
   },
   {
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "answers": [
+      {
+        "text": "1.000 cửa hàng",
+        "correct": true
+      },
+      {
+        "text": "500 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "2.000 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "800 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "1.500 cửa hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -2090,37 +2148,6 @@
       },
       {
         "text": "8 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dành cho người lớn tuổi",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -2153,32 +2180,32 @@
     ]
   },
   {
-    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
-    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
-    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
     "answers": [
       {
-        "text": "1.000 cửa hàng",
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
         "correct": true
       },
       {
-        "text": "500 cửa hàng",
+        "text": "Chỉ dành cho người lớn tuổi",
         "correct": false
       },
       {
-        "text": "2.000 cửa hàng",
+        "text": "Chỉ dành cho trẻ em",
         "correct": false
       },
       {
-        "text": "800 cửa hàng",
+        "text": "Không có hoạt động ngoài trời",
         "correct": false
       },
       {
-        "text": "1.500 cửa hàng",
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -2474,33 +2501,6 @@
     ]
   },
   {
-    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
-    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
-    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
-    "answers": [
-      {
-        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
-        "correct": true
-      },
-      {
-        "text": "Vì họ không có tiền điều trị",
-        "correct": false
-      },
-      {
-        "text": "Bệnh viện quá đông người",
-        "correct": false
-      },
-      {
-        "text": "Họ không tin vào bác sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
     "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
     "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
@@ -2527,6 +2527,33 @@
       },
       {
         "text": "Tổ chức tiệc lớn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cuộc chiến giữa bác sĩ thật với 'lang băm TikTok'",
+    "content": "Bài viết phản ánh tình trạng bệnh nhân từ chối điều trị y tế do tin tưởng vào thông tin sai lệch trên TikTok, dẫn đến những hậu quả nghiêm trọng. Hai trường hợp điển hình là một phụ nữ mắc ung thư vú và một đàn ông mắc ung thư trực tràng đã từ chối can thiệp y tế, dẫn đến tình trạng sức khỏe nghiêm trọng và cuối cùng là sự ra đi của họ. Các bác sĩ bày tỏ lo ngại về sự lan rộng của các phương pháp chữa bệnh không chính thống và kêu gọi người dân cần thận trọng trong việc tìm kiếm thông tin sức khỏe trên mạng xã hội.",
+    "link": "https://vnexpress.net/cuoc-chien-giua-bac-si-that-voi-lang-bam-tiktok-4855158.html",
+    "cat": "suc-khoe",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao nhiều bệnh nhân từ chối điều trị y tế?",
+    "answers": [
+      {
+        "text": "Do tin tưởng vào thông tin sai lệch trên TikTok",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không có tiền điều trị",
+        "correct": false
+      },
+      {
+        "text": "Bệnh viện quá đông người",
+        "correct": false
+      },
+      {
+        "text": "Họ không tin vào bác sĩ",
         "correct": false
       }
     ]
@@ -4476,6 +4503,33 @@
     ]
   },
   {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -4525,33 +4579,6 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
